# handler/auth.go
@@ -2,11 +2,8 @@ package handler
 
 import (
 	"log"
-	"net/http"
 	"time"
 
-	"github.com/Marityr/polls.git/shema"
-	"github.com/Marityr/polls.git/tools"
 	jwt "github.com/appleboy/gin-jwt/v2"
 	"github.com/gin-gonic/gin"
 )
@@ -17,12 +14,38 @@ type User struct {
 	LastName  string
 }
 
-func AuthMiddleware() *jwt.GinJWTMiddleware {
-
+// @Summary     SignIn
+// @Tags        Auth
+// @Description login
+// @ID 			login
+// @Accept      json
+// @Produce     json
+// @Param       input body shema.Login true "credentials"
+// @Router      /login [post]
+func Authenticator(c *gin.Context) (interface{}, error) {
 	type login struct {
 		Username string `form:"username" json:"username" binding:"required"`
 		Password string `form:"password" json:"password" binding:"required"`
 	}
+	var loginVals login
+	if err := c.ShouldBind(&loginVals); err != nil {
+		return "", jwt.ErrMissingLoginValues
+	}
+	userID := loginVals.Username
+	password := loginVals.Password
+
+	if (userID == "admin" && password == "admin") || (userID == "string" && password == "string") {
+		return &User{
+			UserName:  userID,
+			LastName:  "Bo-Yi",
+			FirstName: "Wu",
+		}, nil
+	}
+
+	return nil, jwt.ErrFailedAuthentication
+}
+
+func AuthMiddleware() *jwt.GinJWTMiddleware {
 	// the jwt middleware
 	authMiddleware, err := jwt.New(&jwt.GinJWTMiddleware{
 		Realm:       "test zone",
@@ -44,24 +67,7 @@ func AuthMiddleware() *jwt.GinJWTMiddleware {
 				UserName: claims[identityKey].(string),
 			}
 		},
-		Authenticator: func(c *gin.Context) (interface{}, error) {
-			var loginVals login
-			if err := c.ShouldBind(&loginVals); err != nil {
-				return "", jwt.ErrMissingLoginValues
-			}
-			userID := loginVals.Username
-			password := loginVals.Password
-
-			if (userID == "admin" && password == "admin") || (userID == "test" && password == "test") {
-				return &User{
-					UserName:  userID,
-					LastName:  "Bo-Yi",
-					FirstName: "Wu",
-				}, nil
-			}
-
-			return nil, jwt.ErrFailedAuthentication
-		},
+		Authenticator: Authenticator,
 		Authorizator: func(data interface{}, c *gin.Context) bool {
 			if v, ok := data.(*User); ok && v.UserName == "admin" {
 				return true
@@ -75,23 +81,9 @@ func AuthMiddleware() *jwt.GinJWTMiddleware {
 				"message": message,
 			})
 		},
-		// TokenLookup is a string in the form of "<source>:<name>" that is used
-		// to extract token from the request.
-		// Optional. Default value "header:Authorization".
-		// Possible values:
-		// - "header:<name>"
-		// - "query:<name>"
-		// - "cookie:<name>"
-		// - "param:<name>"
-		TokenLookup: "header: Authorization, query: token, cookie: jwt",
-		// TokenLookup: "query:token",
-		// TokenLookup: "cookie:token",
-
-		// TokenHeadName is a string in the header. Default value is "Bearer"
+		TokenLookup:   "header: Authorization, query: token, cookie: jwt",
 		TokenHeadName: "Bearer",
-
-		// TimeFunc provides the current time. You can override it to use another time value. This is useful for testing or if your server uses a different time zone than your tokens.
-		TimeFunc: time.Now,
+		TimeFunc:      time.Now,
 	})
 
 	if err != nil {
@@ -100,19 +92,3 @@ func AuthMiddleware() *jwt.GinJWTMiddleware {
 
 	return authMiddleware
 }
-
-// @Summary signUp
-// @Tags    Auth
-// @Accept  json
-// @Param   value   body   string   true   "Body"
-// @Router  /auth/signup [post]
-func signUp(c *gin.Context) {
-	var cnt shema.Users
-	c.BindJSON(&cnt)
-	tools.DB.Save(&cnt)
-	c.JSON(http.StatusOK, cnt)
-}
-
-// func signIn(c *gin.Context) {
-
-// }
